@@ -150,4 +150,184 @@ describe ReplaceArithmeticOnRangesAst do
     r.map(input_ast).should == output_ast
   end
 
+  it "should work with nested functions" do
+    input_ast = [:function,
+                 :SUMPRODUCT,
+                 [:arithmetic,
+                  [:comparison,
+                   [:function,
+                    :RIGHT,
+                    [:array,
+                     [:row, [:sheet_reference, :"G.20 (data)", [:cell, :C850]]],
+                     [:row, [:sheet_reference, :"G.20 (data)", [:cell, :C851]]],
+                     [:row, [:sheet_reference, :"G.20 (data)", [:cell, :C852]]],
+                     [:row, [:sheet_reference, :"G.20 (data)", [:cell, :C853]]],
+                     [:row, [:sheet_reference, :"G.20 (data)", [:cell, :C854]]],
+                     [:row, [:sheet_reference, :"G.20 (data)", [:cell, :C855]]],
+                     [:row, [:sheet_reference, :"G.20 (data)", [:cell, :C856]]],
+                     [:row, [:sheet_reference, :"G.20 (data)", [:cell, :C857]]],
+                     [:row, [:sheet_reference, :"G.20 (data)", [:cell, :C858]]],
+                     [:row, [:sheet_reference, :"G.20 (data)", [:cell, :C859]]],
+                     [:row, [:sheet_reference, :"G.20 (data)", [:cell, :C860]]],
+                     [:row, [:sheet_reference, :"G.20 (data)", [:cell, :C861]]]],
+                    [:number, 5.0]],
+                   [:comparator, :"="],
+                   [:string, "urban"]],
+                  [:operator, :*],
+                  [:array,
+                   [:row, [:sheet_reference, :"G.20 (data)", [:cell, :I850]]],
+                   [:row, [:sheet_reference, :"G.20 (data)", [:cell, :I851]]],
+                   [:row, [:sheet_reference, :"G.20 (data)", [:cell, :I852]]],
+                   [:row, [:sheet_reference, :"G.20 (data)", [:cell, :I853]]],
+                   [:row, [:sheet_reference, :"G.20 (data)", [:cell, :I854]]],
+                   [:row, [:sheet_reference, :"G.20 (data)", [:cell, :I855]]],
+                   [:row, [:sheet_reference, :"G.20 (data)", [:cell, :I856]]],
+                   [:row, [:sheet_reference, :"G.20 (data)", [:cell, :I857]]],
+                   [:row, [:sheet_reference, :"G.20 (data)", [:cell, :I858]]],
+                   [:row, [:sheet_reference, :"G.20 (data)", [:cell, :I859]]],
+                   [:row, [:sheet_reference, :"G.20 (data)", [:cell, :I860]]],
+                   [:row, [:sheet_reference, :"G.20 (data)", [:cell, :I861]]]]]]
+
+    output_ast = [:function,
+                  :SUMPRODUCT,
+                  [:array,
+                   [:row,
+                    [:arithmetic,
+                     [:comparison,
+                      [:function,
+                       :RIGHT,
+                       [:sheet_reference, :"G.20 (data)", [:cell, :C850]],
+                       [:number, 5.0]],
+                      [:comparator, :"="],
+                      [:string, "urban"]],
+                     [:operator, :*],
+                     [:sheet_reference, :"G.20 (data)", [:cell, :I850]]]],
+                   [:row,
+                    [:arithmetic,
+                     [:comparison,
+                      [:function,
+                       :RIGHT,
+                       [:sheet_reference, :"G.20 (data)", [:cell, :C851]],
+                       [:number, 5.0]],
+                      [:comparator, :"="],
+                      [:string, "urban"]],
+                     [:operator, :*],
+                     [:sheet_reference, :"G.20 (data)", [:cell, :I851]]]],
+                   [:row,
+                    [:arithmetic,
+                     [:comparison,
+                      [:function,
+                       :RIGHT,
+                       [:sheet_reference, :"G.20 (data)", [:cell, :C852]],
+                       [:number, 5.0]],
+                      [:comparator, :"="],
+                      [:string, "urban"]],
+                     [:operator, :*],
+                     [:sheet_reference, :"G.20 (data)", [:cell, :I852]]]],
+                   [:row,
+                    [:arithmetic,
+                     [:comparison,
+                      [:function,
+                       :RIGHT,
+                       [:sheet_reference, :"G.20 (data)", [:cell, :C853]],
+                       [:number, 5.0]],
+                      [:comparator, :"="],
+                      [:string, "urban"]],
+                     [:operator, :*],
+                     [:sheet_reference, :"G.20 (data)", [:cell, :I853]]]],
+                   [:row,
+                    [:arithmetic,
+                     [:comparison,
+                      [:function,
+                       :RIGHT,
+                       [:sheet_reference, :"G.20 (data)", [:cell, :C854]],
+                       [:number, 5.0]],
+                      [:comparator, :"="],
+                      [:string, "urban"]],
+                     [:operator, :*],
+                     [:sheet_reference, :"G.20 (data)", [:cell, :I854]]]],
+                   [:row,
+                    [:arithmetic,
+                     [:comparison,
+                      [:function,
+                       :RIGHT,
+                       [:sheet_reference, :"G.20 (data)", [:cell, :C855]],
+                       [:number, 5.0]],
+                      [:comparator, :"="],
+                      [:string, "urban"]],
+                     [:operator, :*],
+                     [:sheet_reference, :"G.20 (data)", [:cell, :I855]]]],
+                   [:row,
+                    [:arithmetic,
+                     [:comparison,
+                      [:function,
+                       :RIGHT,
+                       [:sheet_reference, :"G.20 (data)", [:cell, :C856]],
+                       [:number, 5.0]],
+                      [:comparator, :"="],
+                      [:string, "urban"]],
+                     [:operator, :*],
+                     [:sheet_reference, :"G.20 (data)", [:cell, :I856]]]],
+                   [:row,
+                    [:arithmetic,
+                     [:comparison,
+                      [:function,
+                       :RIGHT,
+                       [:sheet_reference, :"G.20 (data)", [:cell, :C857]],
+                       [:number, 5.0]],
+                      [:comparator, :"="],
+                      [:string, "urban"]],
+                     [:operator, :*],
+                     [:sheet_reference, :"G.20 (data)", [:cell, :I857]]]],
+                   [:row,
+                    [:arithmetic,
+                     [:comparison,
+                      [:function,
+                       :RIGHT,
+                       [:sheet_reference, :"G.20 (data)", [:cell, :C858]],
+                       [:number, 5.0]],
+                      [:comparator, :"="],
+                      [:string, "urban"]],
+                     [:operator, :*],
+                     [:sheet_reference, :"G.20 (data)", [:cell, :I858]]]],
+                   [:row,
+                    [:arithmetic,
+                     [:comparison,
+                      [:function,
+                       :RIGHT,
+                       [:sheet_reference, :"G.20 (data)", [:cell, :C859]],
+                       [:number, 5.0]],
+                      [:comparator, :"="],
+                      [:string, "urban"]],
+                     [:operator, :*],
+                     [:sheet_reference, :"G.20 (data)", [:cell, :I859]]]],
+                   [:row,
+                    [:arithmetic,
+                     [:comparison,
+                      [:function,
+                       :RIGHT,
+                       [:sheet_reference, :"G.20 (data)", [:cell, :C860]],
+                       [:number, 5.0]],
+                      [:comparator, :"="],
+                      [:string, "urban"]],
+                     [:operator, :*],
+                     [:sheet_reference, :"G.20 (data)", [:cell, :I860]]]],
+                   [:row,
+                    [:arithmetic,
+                     [:comparison,
+                      [:function,
+                       :RIGHT,
+                       [:sheet_reference, :"G.20 (data)", [:cell, :C861]],
+                       [:number, 5.0]],
+                      [:comparator, :"="],
+                      [:string, "urban"]],
+                     [:operator, :*],
+                     [:sheet_reference, :"G.20 (data)", [:cell, :I861]]]]]]
+
+    r = ReplaceArithmeticOnRangesAst.new
+    output = r.map(input_ast)
+    output.should == output_ast
+
+  end
+
 end
